feature: add auth by webapp